adding tiles and styling pages

--- a/lib/uncut_web/templates/layout/root.html.heex
+++ b/lib/uncut_web/templates/layout/root.html.heex
@@ -12,7 +12,7 @@
   
   <%# body section %>
   <body class="has-background-grey-lighter">
-  <section class="hero is-small is-primary">
+  <section class="hero is-small is-black">
   <div class="hero-body">
      <header>
     <nav class="navbar-is-expanded" role="navigation" aria-label="main navigation">
@@ -27,10 +27,10 @@
         </a>
     </div>
 
-               <div class="navbar-end">
-            <a class="navbar-item is-dark" href="/"><strong>Home</strong></a>
-            <a class="navbar-item" href="/team"><strong>Team</strong></a>
-            <a class="navbar-item" href="/"><strong>Testimonials</strong> </a>
+           <div class="navbar-end">
+          <a class="navbar-item is-dark" href="/"><strong>Home</strong></a>
+          <a class="navbar-item" href="/team"><strong>Team</strong></a>
+          <a class="navbar-item" href="/event"><strong>News/Events</strong> </a>
           </div>
          
       </nav>
