--- a/lib/uncut_web/templates/page/index.html.heex
+++ b/lib/uncut_web/templates/page/index.html.heex
@@ -4,18 +4,38 @@
 
   <h2 class="title is-2 has-text-danger"> who we are </h2>
   <p>Uncut gems is an anti-fgm foudation that aims at zero tolerance against female genital mutilation</p>
-  <%= link to: "/team" do %> <button class="button is-primary is-light"> The team </button>
+  <%= link to: "/team" do %> <button class="button is-black"> The team </button>
   <% end %>
- <h2 class="has-text-danger"><b>Our Key values</b></h2>
-  <ul>
+  </section>
+  <section class="section is-small">
+  <div class="tile is-ancestor">
+  <div class="tile is-parent">
+  <article class="tile is-child box has-background-black">
+ <p class="has-text-danger"><b>Our Key values</b></p>
+  <ul class="has-text-white">
   <li>Trust</li>
   <li>Integrity</li>
   <li>Justice</li>
   </ul>
-  <h2 class="has-text-danger"><b>Mission</b></h2>
-  <p>Our company’s mission is to help girls to live like any other person enjoying her rights as a girl and treated right. iCut will help them escape these dangerous practices claimed to be culture and help the girls live like any other person. We plan to strengthen our weaknesses and work with the society to stop the culture and reach out to every girl around the world.</p>
-<h2 class="has-text-danger"><b>Vision</b></h2>
-<p>A world where women and girls are empowered and free from all forms of gender-based violence, in particular female genital mutilation, where their voices are heard, where they can enjoy their rights and make informed choices about their lives. </p>
+  </article>
+  </div>
+  <div class="tile is-parent">
+  <article class="tile is-child box has-background-black">
+  <p class="has-text-danger">Mission</p>
+  <div class="content">
+  <p class="has-text-white">Our companys mission is to help girls to live like any other person enjoying her rights as a girl and treated right. iCut will help them escape these dangerous practices claimed to be culture and help the girls live like any other person. We plan to strengthen our weaknesses and work with the society to stop the culture and reach out to every girl around the world.</p>
+</div>
+</article>
+</div>
+<div class="tile is-parent">
+<article class="tile is-child box has-background-black">
+<p class="has-text-danger"><b>Vision</b></p>
+<div class="content">
+<p class="has-text-white">A world where women and girls are empowered and free from all forms of gender-based violence, in particular female genital mutilation, where their voices are heard, where they can enjoy their rights and make informed choices about their lives. </p>
+</div>
+</article>
+</div>
+</div>
 </section>
 <section class="section is-small">
   <h2 class="title is-2 has-text-danger"> what we do </h2>
